fix: replace Set.of() with HashSet for API 24 compatibility